--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "test-coverage": "jest --coverage --watchAll"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
+    "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.1"
   },
   "devDependencies": {
